package cn.snwalker.design.structural.proxy.static_proxy;

/**
 * 卖票接口
 */
public interface SellTickets {
    public void sell();
}
